[project]
name = "blockchain"
version = "0.1.0"
description = "A blockchain implementation with wallet and node functionality"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "pycryptodome>=3.15.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pip>=25.0.1",
    "types-flask-cors>=5.0.0.20240902",
]
